# mlops-zoomcap

./: README.md  pyproject.toml
01-intro/: duration_prediction.ipynb  homework.ipynb
